fixed spacing on mobile

--- a/resources/scss/nav.scss
+++ b/resources/scss/nav.scss
@@ -84,7 +84,7 @@
     background-color: $bg-surface-2;
     border: 1px solid $border-strong;
     left: 20px;
-    bottom: 90px;
+    bottom: 70px;
     padding: 12px;
     border-radius: 20px;
     box-shadow: 0 8px 32px rgba(0, 0, 0, 0.5);
